Fixed minor bug with content container using vh instead of vw, Changed content container to be scrollable incase content does not fit on screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,12 +35,13 @@ body {
   position: fixed !important;
   width: 100vh !important;
   height: fit-content !important;
+  overflow-y: auto; /* Enable vertical scrolling */
   transform: translate(-50%,-50%) !important;
   background-color: rgba(100,100,100,0.9) !important;
   padding:20px !important;
   border-radius: 10px !important;
   z-index: 1 !important;
-  max-width: 100vh !important;
+  max-width: 100vw !important;
   max-height: 100vh !important;
 }
 
